# uniparse

./: .gitignore  .release.toml  Cargo.toml  Readme.md  license
.github/workflows/: ci.yml  dependabot.yml  publish.yml  release.yml
uniparse_core/: Cargo.toml
uniparse_core/src/: lib.rs
uniparse_go/: Cargo.toml  Readme.md
uniparse_go/src/: lib.rs  model.rs
uniparse_gradle/: Cargo.toml  Readme.md
uniparse_gradle/src/: lib.rs  model.rs  parser.rs
uniparse_zon/: Cargo.toml  Readme.md
uniparse_zon/src/: lib.rs  model.rs  parser.rs  zon.pest
