[package]
name = "uniparse_gradle"
version = "0.1.0"
edition = "2024"
publish = true
authors = ["pixelacme"]
description = "Parse gradle files into structured rust data"
license = "MIT"
repository = "github.com/pixelacme/uniparse"
keywords = ["rust", "gradle", "parser", "dependencies"]
categories = ["parser", "parser-implementations", "dev-tools"]

[dependencies]
serde = { workspace = true }
uniparse_core = { path = "../uniparse_core" }